--- a/00_Indice.ipynb
+++ b/00_Indice.ipynb
@@ -7,7 +7,6 @@
    "source": [
     "Control\n",
     "=============\n",
-    "# Control\n",
     "- Contiene una colección de notebooks de [Jupyter](https://jupyter.org/) con notas y ejemplos con el contenido propuesto para los cursos **Control análogo** y **Control digital**.\n",
     "\n",
     "- Estas notas fueron escritas por [Jean Pierre DÍAZ-PAZ](https://www.ecoprofe.com/JPDP).\n",
@@ -22,11 +21,11 @@
    "source": [
     "## 0  Introducción\n",
     "\n",
-    "- [Introducción a la programación con Python y Jupyter](PythonJupyter.ipynb)\n",
-    "- [Cálculos en ingeniería con Sympy y Jupyter Notebooks](SympyJupyter.ipynb)\n",
-    "- [Ejercicio: Análisis de un circuito con Sympy](EjercicioSympy.ipynb)\n",
-    "- [Señales Estándar](SenalesEstandar.ipynb)\n",
-    "- [Caracterización de Sistemas LTI en el Dominio del Tiempo](CaracterizacionLTI.ipynb)\n",
+    "- [Introducción a la programación con Python y Jupyter](C_Analogo/PythonJupyter.ipynb)\n",
+    "- [Cálculos en ingeniería con Sympy y Jupyter Notebooks](C_Analogo/SympyJupyter.ipynb)\n",
+    "- [Ejercicio: Análisis de un circuito con Sympy](C_Analogo/EjercicioSympy.ipynb)\n",
+    "- [Señales Estándar](C_Analogo/SenalesEstandar.ipynb)\n",
+    "- [Caracterización de Sistemas LTI en el Dominio del Tiempo](C_Analogo/CaracterizacionLTI.ipynb)\n",
     "\n"
    ]
   },
@@ -37,17 +36,17 @@
    "source": [
     "## 1  Modelos dinámicos en tiempo continuo\n",
     "\n",
-    "- [Generalidades de la transformada de Laplace](Transformada_Laplace.ipynb)\n",
-    "- [Respuesta dinámica](RespuestaDinamica.ipynb)\n",
-    "- [Simulación de funciones de transferencia arbitrarias](Simulacion.ipynb)\n",
-    "- [Modelo dinámico de un circuito RLC](CircuitoRLC.ipynb)\n",
-    "- [Modelo dinámico de un sistema mecánico](Mecanico.ipynb)\n",
-    "- [Modelo dinámico de un sistema de nivel](Fluidos.ipynb)\n",
-    "- [Ejercicio: Análisis de un circuito con almacenamiento de energía](EjercicioCircuito.ipynb)\n",
-    "- [Ejercicio: Analisis de un sistema mecánico](Ejercicio_mecanico.ipynb)\n",
-    "- [Identificación de sistemas](Identificacion.ipynb)\n",
-    "- [Ejercicio: Identificación de sistemas](Ejercicio_Identificacion.ipynb)\n",
-    "- [Ejercicio: Identificación de sistemas en laboratorio](CapturaDatosPLC_Siemens.ipynb)"
+    "- [Generalidades de la transformada de Laplace](C_Analogo/Transformada_Laplace.ipynb)\n",
+    "- [Respuesta dinámica](C_Analogo/RespuestaDinamica.ipynb)\n",
+    "- [Simulación de funciones de transferencia arbitrarias](C_Analogo/Simulacion.ipynb)\n",
+    "- [Modelo dinámico de un circuito RLC](C_Analogo/CircuitoRLC.ipynb)\n",
+    "- [Modelo dinámico de un sistema mecánico](C_Analogo/Mecanico.ipynb)\n",
+    "- [Modelo dinámico de un sistema de nivel](C_Analogo/Fluidos.ipynb)\n",
+    "- [Ejercicio: Análisis de un circuito con almacenamiento de energía](C_Analogo/EjercicioCircuito.ipynb)\n",
+    "- [Ejercicio: Analisis de un sistema mecánico](C_Analogo/Ejercicio_mecanico.ipynb)\n",
+    "- [Identificación de sistemas](C_Analogo/Identificacion.ipynb)\n",
+    "- [Ejercicio: Identificación de sistemas](C_Analogo/Ejercicio_Identificacion.ipynb)\n",
+    "- [Ejercicio: Identificación de sistemas en laboratorio](C_Analogo/CapturaDatosPLC_Siemens.ipynb)"
    ]
   },
   {
@@ -57,12 +56,12 @@
    "source": [
     "## 2  Sistemas realimentados\n",
     "\n",
-    "- [Bucle de control en tiempo continuo](Bucle_control.ipynb)\n",
-    "- [Diagramas de bloques](Diagramas_bloques.ipynb)\n",
-    "- [Ejercicio: Diagramas de bloques](EjercicioBloques.ipynb)\n",
-    "- [Efectos de la realimentación](EfectosLazoCerrado.ipynb)\n",
-    "- [Ejercicio: Efectos de la realimentación](Ejercicio_EfectoLC.ipynb)\n",
-    "- [Error de estado estable](ErrorEstadoEstable.ipynb)\n"
+    "- [Bucle de control en tiempo continuo](C_Analogo/Bucle_control.ipynb)\n",
+    "- [Diagramas de bloques](C_Analogo/Diagramas_bloques.ipynb)\n",
+    "- [Ejercicio: Diagramas de bloques](C_Analogo/EjercicioBloques.ipynb)\n",
+    "- [Efectos de la realimentación](C_Analogo/EfectosLazoCerrado.ipynb)\n",
+    "- [Ejercicio: Efectos de la realimentación](C_Analogo/Ejercicio_EfectoLC.ipynb)\n",
+    "- [Error de estado estable](C_Analogo/ErrorEstadoEstable.ipynb)\n"
    ]
   },
   {
@@ -73,11 +72,11 @@
     "## 3 Lugar geométrico de las raíces\n",
     "\n",
     "\n",
-    "- [Criterio de Routh](Routh.ipynb)\n",
-    "- [Lugar geométrico de las raíces](LGDR.ipynb)\n",
-    "- [Diseño de controladores mediante Lugar Geométrico de las Raíces](controlLGDR.ipynb)\n",
-    "- [Ejercicio: Lugar geométrico de las raíces en modelos](LGDR-ejercicio.ipynb)\n",
-    "- [Ejercicio: Lugar geométrico de las raíces en laboratorio](LGDR_PLC_Siemens.ipynb)\n"
+    "- [Criterio de Routh](C_Analogo/Routh.ipynb)\n",
+    "- [Lugar geométrico de las raíces](C_Analogo/LGDR.ipynb)\n",
+    "- [Diseño de controladores mediante Lugar Geométrico de las Raíces](C_Analogo/controlLGDR.ipynb)\n",
+    "- [Ejercicio: Lugar geométrico de las raíces en modelos](C_Analogo/LGDR-ejercicio.ipynb)\n",
+    "- [Ejercicio: Lugar geométrico de las raíces en laboratorio](C_Analogo/LGDR_PLC_Siemens.ipynb)\n"
    ]
   },
   {
@@ -88,9 +87,9 @@
     "## 4 PID\n",
     "\n",
     "\n",
-    "- [Sintonización de controladores PID](PID.ipynb)\n",
-    "- [Ejercicio: PID en modelos](PID-ejercicio.ipynb)\n",
-    "- [Ejercicio: PID en laboratorio](PID_PLC_Siemens.ipynb)\n"
+    "- [Sintonización de controladores PID](C_Analogo/PID.ipynb)\n",
+    "- [Ejercicio: PID en modelos](C_Analogo/PID-ejercicio.ipynb)\n",
+    "- [Ejercicio: PID en laboratorio](C_Analogo/PID_PLC_Siemens.ipynb)\n"
    ]
   },
   {
@@ -101,7 +100,7 @@
     "## 5 Análisis en frecuencia\n",
     "\n",
     "\n",
-    "- [Análisis de la respuesta en frecuencia](Frecuencia.ipynb)\n",
+    "- [Análisis de la respuesta en frecuencia](C_Analogo/Frecuencia.ipynb)\n",
     "\n"
    ]
   },
@@ -111,7 +110,7 @@
    "metadata": {},
    "source": [
     "## 6 Espacio de estados\n",
-    "- [Modelos en espacios de estados](EspacioEstados.ipynb)"
+    "- [Modelos en espacios de estados](C_Analogo/EspacioEstados.ipynb)"
    ]
   },
   {
@@ -142,11 +141,22 @@
    "version": "3.7.3"
   },
   "latex_envs": {
+   "LaTeX_envs_menu_present": true,
+   "autoclose": false,
+   "autocomplete": true,
    "bibliofile": "biblio.bib",
    "cite_by": "apalike",
    "current_citInitial": 1,
    "eqLabelWithNumbers": true,
-   "eqNumInitial": 0
+   "eqNumInitial": 0,
+   "hotkeys": {
+    "equation": "Ctrl-E",
+    "itemize": "Ctrl-I"
+   },
+   "labels_anchors": false,
+   "latex_user_defs": false,
+   "report_style_numbering": false,
+   "user_envs_cfg": false
   },
   "toc": {
    "base_numbering": 1,
