--- a/C_Analogo/Routh.ipynb
+++ b/C_Analogo/Routh.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "845287fa",
    "metadata": {},
    "outputs": [],
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "63dddc2f",
    "metadata": {},
    "outputs": [
@@ -64,23 +64,49 @@
        "TransferFunction(array([1]), array([  1,  10,  45, 120, 210, 252, 210, 120,  45,  10,   1]))"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Se define la función de transferencia del proceso\n",
-    "Gp = control.tf(1, [1,1])\n",
-    "Gp10 = Gp*Gp*Gp*Gp*Gp*Gp*Gp*Gp*Gp*Gp\n",
+    "Gp = control.tf([1], [1,1])\n",
+    "Gp10 = Gp**10\n",
     "Gp10"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "aac0f587",
+   "execution_count": 8,
+   "id": "a74806ea",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$$\\frac{1}{s + 1}$$"
+      ],
+      "text/plain": [
+       "TransferFunction(array([1]), array([1, 1]))"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Gp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "aac0f587",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -92,7 +118,7 @@
        "       -0.95422344-0.0323362j , -0.9441992 +0.j        ])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -103,9 +129,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "id": "107f6714",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -113,7 +141,7 @@
        "array([], dtype=float64)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,29 +149,6 @@
    "source": [
     "ceros = Gp10.zero()\n",
     "ceros"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "98c7247b",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([-1.00026013+0.j        , -0.99999997+0.00026011j,\n",
-       "       -0.99999997-0.00026011j, -0.99973992+0.j        ])"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "polos = (Gp*Gp*Gp*Gp).pole()\n",
-    "polos"
    ]
   },
   {
@@ -164,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "id": "1961843e",
    "metadata": {},
    "outputs": [
@@ -198,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "id": "de5fb1b1",
    "metadata": {},
    "outputs": [
@@ -211,7 +216,7 @@
        "Poly(a_6*s**6 + a_5*s**5 + a_4*s**4 + a_3*s**3 + a_2*s**2 + a_1*s + a_0, s, domain='ZZ[a_0,a_1,a_2,a_3,a_4,a_5,a_6]')"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "id": "feda53f0",
    "metadata": {},
    "outputs": [
@@ -248,7 +253,7 @@
        "[                                                                                                                                                                                                                                                                                                                                                                                                           a_0,                                                          0,   0,   0]])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -277,31 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "93e27fd0",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle \\operatorname{Poly}{\\left( s^{10} + 10 s^{9} + 45 s^{8} + 120 s^{7} + 210 s^{6} + 252 s^{5} + 210 s^{4} + 120 s^{3} + 45 s^{2} + 10 s + 1, s, domain=\\mathbb{Z} \\right)}$"
-      ],
-      "text/plain": [
-       "Poly(s**10 + 10*s**9 + 45*s**8 + 120*s**7 + 210*s**6 + 252*s**5 + 210*s**4 + 120*s**3 + 45*s**2 + 10*s + 1, s, domain='ZZ')"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "Gp10Den"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 26,
    "id": "c0e49e9b",
    "metadata": {},
    "outputs": [
@@ -325,7 +306,7 @@
        "[          1,          0,        0,      0,  0, 0]])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -343,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 27,
    "id": "2d2461dd",
    "metadata": {},
    "outputs": [
@@ -356,7 +337,7 @@
        "Poly(s**10 + 10*s**9 + 45*s**8 + 120*s**7 + 210*s**6 + 252*s**5 + 210*s**4 + 120*s**3 + 45*s**2 + 10*s + 1, s, domain='ZZ')"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -383,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 28,
    "id": "d5f0ce6b",
    "metadata": {},
    "outputs": [
@@ -407,7 +388,7 @@
        "[                                                                                                                                                       k_c + 1,                                                            0,                      0,                  0,       0,       0]])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -439,51 +420,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 37,
    "id": "1b61497c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle \\left(k_{c} < - \\frac{93184}{25} + \\frac{45056 \\sqrt{39}}{75} \\vee 32 \\operatorname{CRootOf} {\\left(375 k_{c}^{3} + 537303 k_{c}^{2} - 1682304 k_{c} - 226304, 2\\right)} < k_{c}\\right) \\wedge \\left(\\left(k_{c} < \\frac{5632 \\sqrt{5}}{125} + \\frac{512}{5} \\wedge 32 \\operatorname{CRootOf} {\\left(375 k_{c}^{3} + 537303 k_{c}^{2} - 1682304 k_{c} - 226304, 2\\right)} < k_{c}\\right) \\vee k_{c} < -62976 + 28160 \\sqrt{5} \\vee k_{c} < \\frac{512}{5} - \\frac{5632 \\sqrt{5}}{125}\\right) \\wedge k_{c} < - \\frac{93184}{25} + \\frac{45056 \\sqrt{39}}{75}$"
+       "$\\displaystyle \\left(-\\infty, \\frac{512}{5} - \\frac{5632 \\sqrt{5}}{125}\\right)$"
       ],
       "text/plain": [
-       "(k_c < -93184/25 + 45056*sqrt(39)/75) & ((k_c < -93184/25 + 45056*sqrt(39)/75) | (32*CRootOf(375*k_c**3 + 537303*k_c**2 - 1682304*k_c - 226304, 2) < k_c)) & ((k_c < -62976 + 28160*sqrt(5)) | (k_c < 512/5 - 5632*sqrt(5)/125) | ((k_c < 5632*sqrt(5)/125 + 512/5) & (32*CRootOf(375*k_c**3 + 537303*k_c**2 - 1682304*k_c - 226304, 2) < k_c)))"
+       "Interval.open(-oo, 512/5 - 5632*sqrt(5)/125)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "resp = sym.solve([e > 0 for e in A[:, 0]], kc)\n",
+    "resp = sym.solve([e > 0 for e in A[:, 0]], kc).as_set()\n",
     "resp"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "id": "b01ffaee",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle \\left(k_{c} < - \\frac{93184}{25} + \\frac{45056 \\sqrt{39}}{75} \\vee 32 \\operatorname{CRootOf} {\\left(375 k_{c}^{3} + 537303 k_{c}^{2} - 1682304 k_{c} - 226304, 2\\right)} < k_{c}\\right) \\wedge \\left(\\left(k_{c} < \\frac{5632 \\sqrt{5}}{125} + \\frac{512}{5} \\wedge 32 \\operatorname{CRootOf} {\\left(375 k_{c}^{3} + 537303 k_{c}^{2} - 1682304 k_{c} - 226304, 2\\right)} < k_{c}\\right) \\vee k_{c} < -62976 + 28160 \\sqrt{5} \\vee k_{c} < \\frac{512}{5} - \\frac{5632 \\sqrt{5}}{125}\\right) \\wedge k_{c} < - \\frac{93184}{25} + \\frac{45056 \\sqrt{39}}{75}$"
-      ],
-      "text/plain": [
-       "(k_c < -93184/25 + 45056*sqrt(39)/75) & ((k_c < -93184/25 + 45056*sqrt(39)/75) | (32*CRootOf(375*k_c**3 + 537303*k_c**2 - 1682304*k_c - 226304, 2) < k_c)) & ((k_c < -62976 + 28160*sqrt(5)) | (k_c < 512/5 - 5632*sqrt(5)/125) | ((k_c < 5632*sqrt(5)/125 + 512/5) & (32*CRootOf(375*k_c**3 + 537303*k_c**2 - 1682304*k_c - 226304, 2) < k_c)))"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "resp.as_dummy()"
    ]
   },
   {
@@ -496,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 38,
    "id": "27e11c4d",
    "metadata": {},
    "outputs": [],
@@ -510,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 39,
    "id": "935ce21c",
    "metadata": {},
    "outputs": [
@@ -534,7 +491,7 @@
        "[              2.6,                0,                0,                0,    0,   0]])"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -545,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 40,
    "id": "df01bc5d",
    "metadata": {},
    "outputs": [
@@ -569,7 +526,7 @@
        "[               2.7,                0,                0,                0,    0,   0]])"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -580,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 44,
    "id": "358d52a7",
    "metadata": {},
    "outputs": [
@@ -595,7 +552,7 @@
        " array([], dtype=float64))"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -618,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 46,
    "id": "8fa931a9",
    "metadata": {},
    "outputs": [
@@ -633,7 +590,7 @@
        " array([], dtype=float64))"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -712,6 +669,19 @@
    "latex_user_defs": false,
    "report_style_numbering": false,
    "user_envs_cfg": false
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   },
   "varInspector": {
    "cols": {
