--- a/C_Analogo/EjercicioSympy.ipynb
+++ b/C_Analogo/EjercicioSympy.ipynb
@@ -22,17 +22,13 @@
     "\n",
     "![circuito_mallas.png](figuras/circuito_mallas.png)\n",
     "\n",
-    "A partir de este circuito encuentre las expresiones matemáticas para el voltaje en cada resistencia en función de $Vi$.\n",
+    "A partir de este circuito encuentre las expresiones matemáticas para el voltaje en cada nodo en función de $Vi$.\n",
     "\n",
     "\\begin{align}\n",
     "V1 &= expresión\\\\\n",
     "V2 &= expresión\\\\\n",
-    "V3 &= expresión\\\\\n",
-    "V4 &= expresión\\\\\n",
-    "V5 &= expresión\\\\\n",
-    "V6 &= expresión\\\\\n",
-    "V7 &= expresión\\\\\n",
-    "V8 &= expresión\\\\\n",
+    "... &= ... \\\\\n",
+    "Vn &= expresión\\\\\n",
     "\\end{align}\n",
     "\n"
    ]
