--- a/C_Analogo/EjercicioSympy.ipynb
+++ b/C_Analogo/EjercicioSympy.ipynb
@@ -22,7 +22,19 @@
     "\n",
     "![circuito_mallas.png](figuras/circuito_mallas.png)\n",
     "\n",
-    "A partir de este circuito encuentre las expresiones matemáticas para el voltaje en cada nodo en función de $Vi$.\n",
+    "Analice el circuito para encuentrar las expresiones matemáticas de los voltaje en cada nodo en función de $Vi$.\n",
+    "\n",
+    "1. Encuentre las expresiones de forma analítica.\n",
+    "\n",
+    "\\begin{align}\n",
+    "V1 &= expresión\\\\\n",
+    "V2 &= expresión\\\\\n",
+    "... &= ... \\\\\n",
+    "Vn &= expresión\\\\\n",
+    "\\end{align}\n",
+    "\n",
+    "\n",
+    "2. Encuentre las soluciones usando Python.\n",
     "\n",
     "\\begin{align}\n",
     "V1 &= expresión\\\\\n",
